(follow-up r91518; bug 29658 et al.) Improving RTL support for several extensions: AbuseFilter: aligning rules edit box as LTR, since they are essentially English CodeReview: aligning commit messages according to content language direction; and aligning input boxes on SpecialRepoAdmin as LTR FlaggedRevs: aligning box shown on articles to content language dir; and adding direction marks to ReviewedPages & UnreviewedPages LiquidThreads: * add direction mark * make headings follow the content language dir * remove lqt_post_ltr/rtl (added a few commits ago) to use mw-content-ltr/rtl in core UploadWizard: make calendar input follow user direction (not content direction, as since r91518) (see bug 28902)

--- a/abusefilter.css
+++ b/abusefilter.css
@@ -110,3 +110,14 @@ table.mw-abusefilter-diff th {
 .mw-abusefilter-diff-multiline td.diff-deletedline {
 	width: 50%;
 }
+
+/* Rules are in English */
+/* @noflip */textarea#wpFilterRules { direction: ltr; }
+
+/* Name is in site content language */
+/* @noflip */.sitedir-ltr .TablePager_col_af_public_comments {
+	direction: ltr;
+}
+/* @noflip */.sitedir-rtl .TablePager_col_af_public_comments {
+	direction: rtl;
+}
